--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -57,7 +57,7 @@
   "missing_card_fields": "Missing card fields",
   "pay_now": "Pay now",
   "codebase_has_to_stay_opensource": "The codebase has to stay open source, whether it was modified or not",
-  "cannot_repackage_codebase": "You can not repackage or sell the codebases",
+  "cannot_repackage_codebase": "You can not repackage or sell the codebase",
   "acquire_license": "Acquire a commercial license to remove these terms by emailing",
   "terms_summary": "Summary of terms",
   "open_env": "Open .env and agree to our License",
